--- a/BiodiversityApp/static/css/style.css
+++ b/BiodiversityApp/static/css/style.css
@@ -4,5 +4,4 @@ body {
 
 .col-md-12 {background-image: url("http://meducator.org/wp-content/uploads/2017/12/Bacteria-750x563.jpg")}
 
-p { color: whitesmoke;
-font-size: 300%;}
+p { color: whitesmoke;}
